// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlsView renders when paused 1`] = `
preact-render-spy (1 nodes)
-------
<div>
  <Header></Header>
  <Wrapper align="center">
    <VerticalLayout align="center">
      <TimerComponent
        startTime={1000}
        baseTime={3000}
        splits={Array []}
      >
      </TimerComponent>
      <LastSplit></LastSplit>
      <SidebarLayout>
        <VerticalLayout>
          <Button
            isPrimary={true}
            onClick={[Function anonymous]}
          >
            Start
          </Button>
          <HorizontalLayout>
            <Button onClick={[Function anonymous]}>Pause</Button>
            <Button onClick={[Function anonymous]}>Stop</Button>
            <Button onClick={[Function anonymous]}>Reset</Button>
          </HorizontalLayout>
        </VerticalLayout>
        <SplitList splits={Array []}></SplitList>
      </SidebarLayout>
    </VerticalLayout>
  </Wrapper>
</div>

`;

exports[`ControlsView renders when playing 1`] = `
preact-render-spy (1 nodes)
-------
<div>
  <Header></Header>
  <Wrapper align="center">
    <VerticalLayout align="center">
      <TimerComponent
        isPlaying={true}
        startTime={1000}
        baseTime={3000}
        splits={Array []}
      >
      </TimerComponent>
      <LastSplit></LastSplit>
      <SidebarLayout>
        <VerticalLayout>
          <Button
            isPrimary={true}
            onClick={[Function anonymous]}
          >
            Split
          </Button>
          <HorizontalLayout>
            <Button onClick={[Function anonymous]}>Pause</Button>
            <Button onClick={[Function anonymous]}>Stop</Button>
            <Button onClick={[Function anonymous]}>Reset</Button>
          </HorizontalLayout>
        </VerticalLayout>
        <SplitList splits={Array []}></SplitList>
      </SidebarLayout>
    </VerticalLayout>
  </Wrapper>
</div>

`;

exports[`ControlsView renders with splits 1`] = `
preact-render-spy (1 nodes)
-------
<div>
  <Header></Header>
  <Wrapper align="center">
    <VerticalLayout align="center">
      <TimerComponent
        startTime={1000}
        baseTime={3000}
        splits={
          Array [
            100,
            200,
            300
          ]
        }
      >
      </TimerComponent>
      <LastSplit split={300}></LastSplit>
      <SidebarLayout>
        <VerticalLayout>
          <Button
            isPrimary={true}
            onClick={[Function anonymous]}
          >
            Start
          </Button>
          <HorizontalLayout>
            <Button onClick={[Function anonymous]}>Pause</Button>
            <Button onClick={[Function anonymous]}>Stop</Button>
            <Button onClick={[Function anonymous]}>Reset</Button>
          </HorizontalLayout>
        </VerticalLayout>
        <SplitList
          splits={
            Array [
              100,
              200,
              300
            ]
          }
        >
        </SplitList>
      </SidebarLayout>
    </VerticalLayout>
  </Wrapper>
</div>

`;
